--- a/report/report.tex
+++ b/report/report.tex
@@ -87,14 +87,14 @@ This report will describe our solution to the Arkham game. In the first section 
 \section*{Verifications}\label{sec:verifications}
 The first verification checks whether it is possible to reach all locations in Arkham. This is checked for the \texttt{Easy} and \texttt{Unplayable} structures. The \textbf{Reachable} predicate is enforced for all locations, hence any structure with unreachable locations will be unsatisfiable. This is the case for the \texttt{Unplayable} structure. If we investigate this structure, we confirm the presence of an unreachable section.
 
-The third verification fails for the \texttt{Unlosable} structure. This verification is intended to check if it is impossible to lose in a given structure. It is however always possible to lose a game (with open gates). Verification seven proves that it is impossible to win a game without attacking. If there is a constant flow of monsters into the city (i.e. there is an open gate present in the city) there will be state where the investigator can no longer move and lose the game. \texttt{Unlosable} has open gates, so if the investigator restrains himself from attacking long enough, he will eventually lose the game. The structure \texttt{Unlosable} is thus losable.
+The third verification fails for the \texttt{Unlosable} structure. This verification is intended to check if it is impossible to lose in a given structure. It is however always possible to lose a game with open gates, given enough time. If there is a constant flow of monsters into the city (i.e. there is an open gate present in the city) there will be state where the investigator can no longer move and lose the game. Such a state can even be reached easily if the investigator decides to enter a building and 3 monsters move to the district connected to the building. Given that \texttt{Unlosable} has open gates, it is definitely possible for the investigator to lose if he refrains from attacking and closing gates. The structure \texttt{Unlosable} is thus losable.
 
-In verification four, we can find that the investigator can live for seven turns in the \texttt{BoxedIn} structure. At turn eight, he will always be in a lost state. The investigator loses due to an excess of monsters. At turn seven the city will be flooded by monsters and no more can spawn without breaking the limit set on the amount of monsters present in the districts.
+In verification four, we can find that the investigator can live for seven turns in the \texttt{BoxedIn} structure. At turn eight, he will always be in a lost state. If he would not have lost by then, more monsters would come at turn 9, making it impossible for all monsters to move. As stated in the assignment, those states will be ignored, so only the states where the investigator loses before turn 9 are kept.
 
 All other verifications behave as expected and don't require additional explanations.
 
 \section*{Conclusion}
-The project was fun to work on, yet took substanially more time to finish than estimated in the assignment. This is largely due to the difficulties of finding bugs. Given that some statements require other statements to work properly, it can be quite difficult to find the exact location of an error. A lot of time is also spent waiting for idp to find a solution. Even for "small" structures like \texttt{Easy}, it can take a suprisingly long time to process. Making small adjustments to the code takes more time than it should, due to that reason.
+The project was fun to work on, yet took substanially more time to finish than estimated in the assignment. This is largely due to the difficulties of finding bugs. Given that some statements require other statements to work properly, it can be quite difficult to find the exact location of an error. A lot of time is also spent waiting for idp to find a solution. Even for "small" structures like \texttt{Easy}, it can take a suprisingly long time to process. Making small adjustments to the code takes more time than it should, due to that reason. Running the project also used up a substantial amount of RAM.
 
 
 In the end it took us around \textbf{30 hours} of work to finish the entire project.
